format good now

--- a/blog_template/index.html
+++ b/blog_template/index.html
@@ -633,18 +633,9 @@
 		<div class="margin-right-block">
 		</div>
 	</div>
-
-	<div class="content-margin-container" id="results">
-		<div class="margin-left-block">
-		</div>
-		<div class="main-content-block">
-			
-		</div>
-		<div class="margin-right-block">
-		</div>
 	</div>
 
-	<div class="content-margin-container" id="implications_and_limitations">
+	<div class="content-margin-container" id="conclusion">
 		<div class="margin-left-block">
 		</div>
 		<div class="main-content-block">
